// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders 1`] = `
<FieldContainer
  component="div"
  label=""
  labelComponent="label"
  render={[Function]}
/>
`;

exports[`Select renders a select menu 1`] = `
<select
  aria-label="test aria label"
  className="ds-c-field"
  id="1"
  label=""
  name="Select"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  value="1"
>
  <option
    key="1"
    value="1"
  >
    1
  </option>
</select>
`;

exports[`Select renders options correctly 1`] = `
<select
  className="ds-c-field"
  defaultValue="1"
  id="1"
  label="Select an option"
  name="Select"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
>
  <option
    key="1"
    value="1"
  >
    1
  </option>
  <option
    key="2"
    value="2"
  >
    2
  </option>
  <option
    key="3"
    value="3"
  >
    3
  </option>
  <option
    key="4"
    value="4"
  >
    4
  </option>
  <option
    key="5"
    value="5"
  >
    5
  </option>
  <option
    key="6"
    value="6"
  >
    6
  </option>
  <option
    key="7"
    value="7"
  >
    7
  </option>
  <option
    key="8"
    value="8"
  >
    8
  </option>
  <option
    key="9"
    value="9"
  >
    9
  </option>
  <option
    key="10"
    value="10"
  >
    10
  </option>
</select>
`;
